fix screenshare overflowing callcontainer

--- a/AlanWalkerTheme/visual-refresh/trivia.css
+++ b/AlanWalkerTheme/visual-refresh/trivia.css
@@ -99,10 +99,6 @@
       .callContainer_cb9592 {
         border-top: 0;
         border-radius: 0;
-
-        .videoWrapper__6981d {
-          width: 100% !important;
-        }
       }
     }
     .container__9293f,
